@@ -8,7 +8,7 @@ Converting TSE data into STS (state sequences) format.
 Conversion from TSE (time stamped event sequences) vertical format into STS (state sequences) data format.
 }
 \usage{
-TSE_to_STS(seqdata, id = 1, timestamp = 2, event = 3, stm = NULL, tmin = 1, 
+TSE_to_STS(seqdata, id = 1, timestamp = 2, event = 3, stm = NULL, tmin = 1,
     tmax = NULL, firstState = "None")
 }
 
@@ -46,9 +46,9 @@ In Ras, Z. & Dardzinska, A. (eds) \emph{Advances in Data Management}. Series: \e
 data(actcal.tse)
 events <- c("PartTime", "NoActivity", "FullTime", "LowPartTime")
 ## Dropping all previous events.
-stm <- seqe2stm(events, dropList=list("PartTime"=events[-1], 
+stm <- seqe2stm(events, dropList=list("PartTime"=events[-1],
    NoActivity=events[-2], FullTime=events[-3], LowPartTime=events[-4]))
-mysts <- TSE_to_STS(actcal.tse, id=1, timestamp=2, event=3, 
+mysts <- TSE_to_STS(actcal.tse[1:100,], id=1, timestamp=2, event=3,
    stm=stm, tmin=1, tmax=12, firstState="None")
 }
 
