@@ -27,7 +27,7 @@ In Extraction et gestion des connaissances (EGC 2010), \emph{Revue des nouvelles
 
 \examples{
 data(actcal.tse)
-actcal.seqe <- seqecreate(actcal.tse)
+actcal.seqe <- seqecreate(actcal.tse[1:200,])[1:6,]
 ## We have 8 different event in this dataset
 idcost <- rep(1, 8)
 dd <- seqedist(actcal.seqe, idcost=idcost, vparam=.1)
