@@ -51,9 +51,13 @@ In Extraction et gestion des connaissances (EGC 2010), \emph{Revue des nouvelles
 }
 \examples{
 data(actcal.tse)
+actacl.tse <- actcal.tse[1:500,]
+iseq <- unique(actcal.tse$id)
+nseq <- length(iseq)
 data(actcal)
+actcal <- actcal[rownames(actcal) \%in\% iseq,]
 actcal.seqe <- seqecreate(actcal.tse)
-seqelength(actcal.seqe) <- rep(12, nrow(actcal))
+seqelength(actcal.seqe) <- rep(12, nseq)
 seqedplot(actcal.seqe, type="hazard", breaks=6, group=actcal$sex, lwd=3)
 seqedplot(actcal.seqe, type="survival", group=actcal$sex, lwd=3)
 }
