@@ -6,7 +6,7 @@ Ritschard}
 %
 \title{Event sequence length and number of events}
 %
-\description{ 
+\description{
   Adds the sequence length (number of transitions) and total number of events of event sequences to the data attribute of a \code{subseqelist} event sequence object.
 }
 \usage{
@@ -25,10 +25,10 @@ Ritschard}
 %}
 \examples{
 data(actcal.tse)
-actcal.seqe <- seqecreate(actcal.tse)
+actcal.seqe <- seqecreate(actcal.tse[1:500,])
 
 ##Searching for frequent subsequences appearing at least 30 times
-fsubseq <- seqefsub(actcal.seqe, minSupport=30)
+fsubseq <- seqefsub(actcal.seqe, minSupport=10)
 fsubseq <- seqentrans(fsubseq)
 ## dispaying only those with at least 3 transitions
 fsubseq[fsubseq$data$ntrans>2]
