@@ -9,7 +9,7 @@
 
 
 \description{
-Returns a sorting vector which to sort state sequences in a TraMineR sequence object (\code{\link[TraMineR]{seqdef}}) by the states at the successive positions.}
+Returns a sorting vector to sort state sequences in a TraMineR sequence object (\code{\link[TraMineR]{seqdef}}) by the states at the successive positions.}
 
 \usage{
 sorti(seqdata, start = "end", sort.index=TRUE)
@@ -46,18 +46,18 @@ Details about \code{type = "i"} or \code{type = "I"} in
 
 \examples{
 data(actcal)
-actcal.seq <- seqdef(actcal[,13:24])
+actcal.seq <- seqdef(actcal[1:100,13:24])
 par(mfrow=c(1,2))
 seqIplot(actcal.seq, sortv=sortv(actcal.seq), withlegend = FALSE)
 seqIplot(actcal.seq, sortv=sortv(actcal.seq, start="beg"), withlegend = FALSE)
-actcal.seq[sorti(actcal.seq)[1:10],]
+actcal.seq[sorti(actcal.seq)[90:100],]
 
 data(mvad)
-mvad.seq <- seqdef(mvad[,17:86])
+mvad.seq <- seqdef(mvad[1:100,17:86])
 par(mfrow=c(1,2))
 seqIplot(mvad.seq, sortv=sortv(mvad.seq, start="end"), withlegend = FALSE)
 seqIplot(mvad.seq, sortv=sortv(mvad.seq, start="beg"), withlegend = FALSE)
-print( mvad.seq[sorti(mvad.seq,start="beg")[700:712],], format="SPS")
+print( mvad.seq[sorti(mvad.seq,start="beg")[90:100],], format="SPS")
 
 }
 \keyword{util}
